--- a/edit-macros.tex
+++ b/edit-macros.tex
@@ -103,7 +103,7 @@
 \newcommand\ck[1]{\nbc{Claude}{#1}{cyan}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{gray}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{magenta}}
+\newcommand\katznote[1]{\nbc{Dan}{#1}{magenta}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{olive}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{orange}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{purple}}
