--- a/edit-macros.tex
+++ b/edit-macros.tex
@@ -101,6 +101,8 @@
 \newcommand\cg[1]{\nbc{Carol}{#1}{blue}}
 \newcommand\jh[1]{\nbc{James}{#1}{brown}}
 \newcommand\ck[1]{\nbc{Claude}{#1}{cyan}}
+   \definecolor{darkgreen}{rgb}{0,0.6,0}
+\newcommand\katznote[1]{\nbc{Dan}{#1}{darkgreen}} % add more author macros here
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{gray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{magenta}}
