completed first pass over pledges

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -711,36 +711,24 @@ A number of steps should be undertaken toward this:
 
 \todo{intro needed?}
 
-%:HERE <============
-\onhere
-
 % ----------
 \paragraph{I will contribute to sustaining software I use and rely on.}
+% \jv{"I will contribute to the open software projects that I use and rely on"}
+% \on{was: I will make explicit my intentions to sustain (or not sustain) software I release.}
 
-\jv{"I will contribute to the open software projects that I use and rely on"}
-
-
-\on{was: I will make explicit my intentions to sustain (or not sustain) software I release.}
-
-\emph{Background.} Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author?s intentions for a project before deciding to rely on it.  
+\emph{Background.} Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author's intentions for a project before deciding to rely on it.  
 
 \emph{Contradictions or concerns.} Software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited. 
 
 
 \emph{What actions are needed?}
-
-
-
-Actions required: A framework for understanding different kinds of software would be useful, along with better ways to evaluate the likely utility of a piece of software. 
+A framework for understanding different kinds of software would be useful, along with better ways to evaluate the likely utility of a piece of software. 
 
 
 % ----------
 \paragraph{I will package, release and archive versions of my software.}
-
-\on{was: I will contribute to supporting software I use and rely on.}
-
-
-\jv{this needs semantic versioning! put this in the pledge or the discussion?}
+% \on{was: I will contribute to supporting software I use and rely on.}
+% \jv{this needs semantic versioning! put this in the pledge or the discussion?}
 
 \emph{Background.}
 No software project is an island. We all rely on other software to build our software. If we use free software, such as tools, libraries and compilers, then it is fair and reasonable that we try and support these projects if we can. This might include citing it, letters of support, reporting issues, fixing bugs, contributing new features or monetary contributions.
@@ -748,17 +736,9 @@ No software project is an island. We all rely on other software to build our sof
 \emph{Contradictions or concerns.}
 Some projects may be concerned about contributing new features that may compromise their research in some way. In this case new features could be contributed upstream after relevant papers have been published.
 
-\emph{What actions are needed?}
-
-
-
-Why would those small actions have impact:
-
-
-
-Who else needs to act:
-
-
+%\emph{What actions are needed?}
+%Why would those small actions have impact:
+%Who else needs to act:
 
 
 % ----------
@@ -768,28 +748,18 @@ Who else needs to act:
 
 % ----------
 \paragraph{I will consider and document the sustainability of my research software as thoroughly as its function.}
-
-
-\on{Formerly: I will understand what sort of project I'm working with/on. I will help others articulate these choices for their own projects.}
-
+% \on{Formerly: I will understand what sort of project I'm working with/on. I will help others articulate these choices for their own projects.}
 
 \on{somewhat mysterious. should be more precise}
 \jv{note the distinction between "sustainable" and "maintainable". A piece of software could be very clean and maintainable, but there might not be the processes or manpower available to sustain it.}
 
 
-
-
-\emph{Background.} Academic software varies widely along dimensions relevant for planning development. Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Software engineering practices that are appropriate?indeed necessary?for the former may be overkill for the later. 
+\emph{Background.} Academic software varies widely along dimensions relevant for planning development. Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Software engineering practices that are appropriate (indeed necessary) for the former may be overkill for the latter. 
 
 \emph{Contradictions or concerns.} Even software used for a single paper needs to be correct, auditable and reproducible (if only by the author), necessitating a certain level of engineering effort to ensure quality. And software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited. 
 
-
 \emph{What actions are needed?}
-
-
-
-
-Actions required: A framework for understanding different kinds of software and appropriate software engineering and project management techniques would be helpful, as would better ways to evaluate the likely utility of a piece of software. 
+A framework for understanding different kinds of software and appropriate software engineering and project management techniques would be helpful, as would better ways to evaluate the likely utility of a piece of software. 
 
 
 
